crates/daedalus/tests/ui/transport/fail_type_key_on_fn.rs
use daedalus::type_key;

#[type_key("test:not_a_type")]
fn not_a_type() {}

fn main() {}
